# code-jam-12

./: .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  server.py
.github/workflows/: pre-commit.yaml
cj12/: __init__.py  __main__.py  aes.py  app.py  chess.py  container.py  crypt.py  dom.py  entrypoint.py  file.py  html.py  index.html  js.pyi  ui.html
cj12/methods/: __init__.py  chess.py  colour_picker.py  direction.py  location.py  method.py  methods.py  music.py  password.py  pattern_lock.py  safe.py
cj12/rpg/: __init__.py  terminal.py
static/: base.css  index.html  loader.css  ui.html
static/methods/chess/: page.html
static/methods/chess/pieces/: readme.txt
static/methods/colour_picker/: page.html
static/methods/direction/: page.html
static/methods/location/: page.html
static/methods/music/: page.html
static/methods/password/: page.html
static/methods/pattern_lock/: page.html
static/methods/safe/: page.html
tests/: test_arithmetic.py  test_container.py  test_encryption.py  test_python.py
typings/: js.pyi
